panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__initialisation__test_initialise_ineligible_array_with_unknown_length_with_string_literal.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/initialisation/test_initialise_ineligible_array_with_unknown_length_with_string_literal.c
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: cannot declare variable `abc` with incomplete type `array<short; ∅>`
    ╭─[panko/tests/cases/initialisation/test_initialise_ineligible_array_with_unknown_length_with_string_literal.c:10:11]
    │
 10 │     short abc[] = "abc";
    │           ─┬─  
    │            ╰─── declared here
────╯

Error: array of inappropriate type `array<short; ∅>` initialised by string literal
    ╭─[panko/tests/cases/initialisation/test_initialise_ineligible_array_with_unknown_length_with_string_literal.c:10:19]
    │
 10 │     short abc[] = "abc";
    │     ─────┬─────   ──┬──  
    │          │          ╰──── this is a character string literal, which can only initialise arrays of `char`, `unsigned char` or `signed char`
    │          │               
    │          ╰─────────────── this is an array of `short`
────╯

Error: array of inappropriate type `array<short; ∅>` initialised by string literal
    ╭─[panko/tests/cases/initialisation/test_initialise_ineligible_array_with_unknown_length_with_string_literal.c:10:19]
    │
 10 │     short abc[] = "abc";
    │     ─────┬─────   ──┬──  
    │          │          ╰──── this is a character string literal, which can only initialise arrays of `char`, `unsigned char` or `signed char`
    │          │               
    │          ╰─────────────── this is an array of `short`
────╯

Error: cannot declare variable `xs` with incomplete type `array<int; ∅>`
    ╭─[panko/tests/cases/initialisation/test_initialise_ineligible_array_with_unknown_length_with_string_literal.c:11:9]
    │
 11 │     int xs[] = "abc";
    │         ─┬  
    │          ╰── declared here
────╯

Error: array of inappropriate type `array<int; ∅>` initialised by string literal
    ╭─[panko/tests/cases/initialisation/test_initialise_ineligible_array_with_unknown_length_with_string_literal.c:11:16]
    │
 11 │     int xs[] = "abc";
    │     ────┬───   ──┬──  
    │         │        ╰──── this is a character string literal, which can only initialise arrays of `char`, `unsigned char` or `signed char`
    │         │             
    │         ╰───────────── this is an array of `int`
────╯

Error: array of inappropriate type `array<int; ∅>` initialised by string literal
    ╭─[panko/tests/cases/initialisation/test_initialise_ineligible_array_with_unknown_length_with_string_literal.c:11:16]
    │
 11 │     int xs[] = "abc";
    │     ────┬───   ──┬──  
    │         │        ╰──── this is a character string literal, which can only initialise arrays of `char`, `unsigned char` or `signed char`
    │         │             
    │         ╰───────────── this is an array of `int`
────╯

Error: invalid implicit conversion from `ptr<char>` to `int`
    ╭─[panko/tests/cases/initialisation/test_initialise_ineligible_array_with_unknown_length_with_string_literal.c:12:17]
    │
 12 │     int ys[] = {"abc"};
    │                 ──┬──  
    │                   ╰──── this is of type `ptr<char>`, which cannot be implicitly converted to `int`
────╯

Error: invalid implicit conversion from `ptr<char>` to `int`
    ╭─[panko/tests/cases/initialisation/test_initialise_ineligible_array_with_unknown_length_with_string_literal.c:12:17]
    │
 12 │     int ys[] = {"abc"};
    │                 ──┬──  
    │                   ╰──── this is of type `ptr<char>`, which cannot be implicitly converted to `int`
────╯

Error: invalid implicit conversion from `ptr<char>` to `int`
    ╭─[panko/tests/cases/initialisation/test_initialise_ineligible_array_with_unknown_length_with_string_literal.c:13:22]
    │
 13 │     int zs[][100] = {"abc", {"d"}};
    │                      ──┬──  
    │                        ╰──── this is of type `ptr<char>`, which cannot be implicitly converted to `int`
────╯

Error: invalid implicit conversion from `ptr<char>` to `int`
    ╭─[panko/tests/cases/initialisation/test_initialise_ineligible_array_with_unknown_length_with_string_literal.c:13:22]
    │
 13 │     int zs[][100] = {"abc", {"d"}};
    │                      ──┬──  
    │                        ╰──── this is of type `ptr<char>`, which cannot be implicitly converted to `int`
────╯

Error: invalid implicit conversion from `ptr<char>` to `int`
    ╭─[panko/tests/cases/initialisation/test_initialise_ineligible_array_with_unknown_length_with_string_literal.c:13:30]
    │
 13 │     int zs[][100] = {"abc", {"d"}};
    │                              ─┬─  
    │                               ╰─── this is of type `ptr<char>`, which cannot be implicitly converted to `int`
────╯

Error: invalid implicit conversion from `ptr<char>` to `int`
    ╭─[panko/tests/cases/initialisation/test_initialise_ineligible_array_with_unknown_length_with_string_literal.c:13:30]
    │
 13 │     int zs[][100] = {"abc", {"d"}};
    │                              ─┬─  
    │                               ╰─── this is of type `ptr<char>`, which cannot be implicitly converted to `int`
────╯

Error: invalid implicit conversion from `ptr<char>` to `int`
    ╭─[panko/tests/cases/initialisation/test_initialise_ineligible_array_with_unknown_length_with_string_literal.c:15:10]
    │
 15 │         {"abc"},
    │          ──┬──  
    │            ╰──── this is of type `ptr<char>`, which cannot be implicitly converted to `int`
────╯

Error: invalid implicit conversion from `ptr<char>` to `int`
    ╭─[panko/tests/cases/initialisation/test_initialise_ineligible_array_with_unknown_length_with_string_literal.c:15:10]
    │
 15 │         {"abc"},
    │          ──┬──  
    │            ╰──── this is of type `ptr<char>`, which cannot be implicitly converted to `int`
────╯

Error: invalid implicit conversion from `ptr<char>` to `int`
    ╭─[panko/tests/cases/initialisation/test_initialise_ineligible_array_with_unknown_length_with_string_literal.c:16:10]
    │
 16 │         {"d"},
    │          ─┬─  
    │           ╰─── this is of type `ptr<char>`, which cannot be implicitly converted to `int`
────╯

Error: invalid implicit conversion from `ptr<char>` to `int`
    ╭─[panko/tests/cases/initialisation/test_initialise_ineligible_array_with_unknown_length_with_string_literal.c:16:10]
    │
 16 │         {"d"},
    │          ─┬─  
    │           ╰─── this is of type `ptr<char>`, which cannot be implicitly converted to `int`
────╯

Error: cannot declare variable `multidimensional` with incomplete type `array<array<int; 4>; ∅>`
    ╭─[panko/tests/cases/initialisation/test_initialise_ineligible_array_with_unknown_length_with_string_literal.c:18:9]
    │
 18 │     int multidimensional[][4] = "abc";
    │         ────────┬───────  
    │                 ╰───────── declared here
────╯

Error: array of inappropriate type `array<array<int; 4>; ∅>` initialised by string literal
    ╭─[panko/tests/cases/initialisation/test_initialise_ineligible_array_with_unknown_length_with_string_literal.c:18:33]
    │
 18 │     int multidimensional[][4] = "abc";
    │     ────────────┬────────────   ──┬──  
    │                 │                 ╰──── this is a character string literal, which can only initialise arrays of `char`, `unsigned char` or `signed char`
    │                 │                      
    │                 ╰────────────────────── this is an array of `array<int; 4>`
────╯

Error: array of inappropriate type `array<array<int; 4>; ∅>` initialised by string literal
    ╭─[panko/tests/cases/initialisation/test_initialise_ineligible_array_with_unknown_length_with_string_literal.c:18:33]
    │
 18 │     int multidimensional[][4] = "abc";
    │     ────────────┬────────────   ──┬──  
    │                 │                 ╰──── this is a character string literal, which can only initialise arrays of `char`, `unsigned char` or `signed char`
    │                 │                      
    │                 ╰────────────────────── this is an array of `array<int; 4>`
────╯

Error: invalid implicit conversion from `ptr<char>` to `int`
    ╭─[panko/tests/cases/initialisation/test_initialise_ineligible_array_with_unknown_length_with_string_literal.c:19:42]
    │
 19 │     int another_multidimensional[][5] = {"def"};
    │                                          ──┬──  
    │                                            ╰──── this is of type `ptr<char>`, which cannot be implicitly converted to `int`
────╯

Error: invalid implicit conversion from `ptr<char>` to `int`
    ╭─[panko/tests/cases/initialisation/test_initialise_ineligible_array_with_unknown_length_with_string_literal.c:19:42]
    │
 19 │     int another_multidimensional[][5] = {"def"};
    │                                          ──┬──  
    │                                            ╰──── this is of type `ptr<char>`, which cannot be implicitly converted to `int`
────╯
